fix: resolve navbar dropdown and layout issues
Resolved an issue on the homepage where the navbar dropdown buttons were not disappearing on scrolldown. Updated the logic.

Also, made the following enhancements on the homepage:
- Linked the 'Contact Us' button in the horizon section to the Contact Us page.
- Improved responsiveness of homepage boxes, ensuring they adjust well on different screen sizes.
- Correctly aligned the 'Contact Us' box.
- Ensured overall content responsiveness.
- Set input types for better user experience on the Contact Us page:
  - Changed the phone number input type to 'number.'
  - Set the email input type to 'email.'

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -401,7 +401,10 @@ header .nav-item a:hover {
   }
 }
 
-@media (max-width: 500px) {
+@media (max-width: 600px) {
+  .row_first{
+    width: 100%;
+  }
   .div_text h2 {
     font-size: 23px;
   }
@@ -794,7 +797,7 @@ section.work .contents {
   margin-top: 3rem;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
-  grid-gap: 5rem;
+  grid-gap: 8rem;
   overflow: hidden;
 }
 
@@ -1048,21 +1051,25 @@ section.contact-us .left {
     #fc751c,
     #fb8721
   );
-  padding: 2.5rem 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  padding: 1rem 6%;
   color: #fdecbe;
   width: 100%;
 }
 
 section.contact-us .left h1,
 section.contact-us .left p {
-  width: 78%;
+  width: 100%;
 }
 
 section.contact-us .left h1 {
   font-weight: 700;
   color: #fff;
   font-size: 2.2rem;
-  padding-bottom: 15px;
+  /* padding-bottom: 15px; */
 }
 
 section.contact-us .right .outer {
@@ -1085,8 +1092,10 @@ section.contact-us .button .btn-1 {
 section .contact-us-box {
   display: grid;
   align-items: center;
-  padding: 1.8em;
-  padding-left: 7.5em;
+  /* padding: 1.8em;
+  padding-left: 7.5em; */
+  padding: 1rem 6%;
+
   background-color: #040052;
   width: 100%;
   color: white;
@@ -1097,7 +1106,7 @@ section .contact-us-box {
   justify-content: flex-start;
   align-items: center;
   column-gap: 20%;
-  width: 90%;
+  width: 100%;
 }
 
 .contact-us-number {
@@ -1788,6 +1797,9 @@ section div.wrapper {
 
 /* Subscribe */
 .subscribe {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   position: relative;
   margin-bottom: -5rem;
   background: -webkit-linear-gradient(0deg, #fa2424, #fb8721);
